# python-fastapi-user-management

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  insomnia_paneas.yaml  populate_database.sql  pyproject.toml  requirements.txt  run.sh
.devcontainer/: .env  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 07eed56c1d2a_alterando_username_para_email.py  10197a91d78a_corrigindo_campo_no_permission_group.py  16bc1ac58957_corrigindo_campo_no_permission_group.py  25258749ff60_.py  6c01e2c9e1c2_adicionando_relacao_entre_grupo_de_.py  8b2f86db2e56_setando_o_default_do_is_active_do_user_.py  9fb421ddc398_corrigindo_campo_no_permission_group.py  b29d8f0d73ac_ajustando_relacao_entre_permissao_grupo_.py  c414497a3c73_adicionando_tabelas_no_banco_users_.py  c69969636b69_many_to_many_entre_grupos_e_permissao.py  e90fc428a175_adicionando_uniqueconstraint_para_.py
src/: base.py  main.py  settings.py  tests_base.py
src/apps/authentication/: middlewares.py  routes.py  schemas.py
src/apps/many_to_many/: crud.py  routes.py
src/apps/many_to_many/permissions_groups_and_permissions/: crud.py  (+4 more)
src/apps/permissions/: crud.py  models.py  routes.py  schemas.py  test_permissions.py
src/apps/permissions_groups/: crud.py  models.py  routes.py  schemas.py  test_permissions_groups.py
src/apps/routes/: crud.py  models.py  routes.py  schemas.py  test_routes.py
src/apps/users/: crud.py  mail.py  models.py  routes.py  schemas.py  tasks.py  test_users.py  utils.py
src/database/: base.py  dependencies.py
src/scripts/: db_connection.py
(+13 files in other folders)
